Fix spacing of programs
center it instead of spreading it out. feels thin at the sides otherwise

--- a/assets/site/home.scss
+++ b/assets/site/home.scss
@@ -315,7 +315,7 @@ section#festival {
             display: flex;
             flex-wrap: wrap;
             align-items: stretch;
-            justify-content: space-evenly;
+            justify-content: center;
             text-align: center;
             padding-top: 1rem;
             gap: 4rem 2rem;
